syntax = "proto3";

package main;

option go_package = ".";

service ExampleService {
    rpc ExampleMethod (ExampleRequest) returns (ExampleResponse) {}
}

message ExampleRequest {
    string name = 1;
}

message ExampleResponse {
    string message = 1;
}